[package]
name = "kmeans"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rand = "^0.8.5"
plotters = "^0.3.1"
clap = { version = "3.1.6", features = ["derive"] }
serde = { version = "1.0.117", features = ["derive"] }
serde_json = "1.0.0"
